--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,6 +4,11 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+dependencies {
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-common:$paging_version"
 }
