--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,38 +37,34 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "androidx.fragment:fragment-ktx:1.5.2"
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation(Android.core_ktx)
+    implementation(Android.appcompat)
+    implementation(Android.material)
+    implementation(Android.constraintlayout)
+    implementation(Android.fragment_ktx)
+    testImplementation(TestDependencies.junit)
+    androidTestImplementation(TestDependencies.ext_junit)
+    androidTestImplementation(TestDependencies.espresso_core)
     //ktx dependecies
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation(KtxDependencies.lifecycle_runtime_ktx)
+    implementation(KtxDependencies.lifecycle_viewmodel_ktx)
 
-    def koin_version = "3.2.0"
     // Koin Core features
-    implementation "io.insert-koin:koin-core:$koin_version"
+    implementation(Koin.koin_core)
     // Koin main features for Android
-    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation(Koin.koin_android)
     // Navigation Graph
-    implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
+    implementation(Koin.koin_androidx_navigation)
 
     //retrofit
-    def retrofit_version = "2.9.0"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation(Retrofit.retrofit)
 
     // navigation jetpack
-    def nav_version = "2.5.2"
-    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
-    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+    implementation(Navigation.navigation_fragment_ktx)
+    implementation(Navigation.navigation_ui_ktx)
 
     // pagging
-    def paging_version = "3.1.1"
-    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation(Paging.paging_runtime)
 
     // modules
     implementation project(path: ':data')
