--- a/data/build.gradle
+++ b/data/build.gradle
@@ -31,34 +31,30 @@ android {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    def koin_version = "3.2.0"
+    testImplementation(TestDependencies.junit)
+    androidTestImplementation(TestDependencies.ext_junit)
+    androidTestImplementation(TestDependencies.espresso_core)
     // Koin Core features
-    implementation "io.insert-koin:koin-core:$koin_version"
+    implementation(Koin.koin_core)
     // Koin main features for Android
-    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation(Koin.koin_android)
     //retrofit
-    def retrofit_version = "2.9.0"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation(Retrofit.retrofit)
     //logging
-    implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
+    implementation(Retrofit.logging_interceptor)
     //GSON
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation(Retrofit.converter_gson)
 
     //room
-    def room_version = "2.4.3"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation(Room.room_runtime)
+    implementation(Room.room_ktx)
+    annotationProcessor(Room.room_compiler)
+    kapt(Room.room_compiler)
 
     // pagging
-    def paging_version = "3.1.1"
-    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation(Paging.paging_runtime)
     // optional - Paging 3 Integration
-    implementation "androidx.room:room-paging:$room_version"
+    implementation(Room.room_paging)
 
     //modules
     implementation project(path: ':domain')
