--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,6 +9,5 @@ java {
 }
 
 dependencies {
-    def paging_version = "3.1.1"
-    implementation "androidx.paging:paging-common:$paging_version"
+    implementation(Paging.paging_common)
 }
