переименован модуль app -> presentation

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,6 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "Ruen"
-include ':app'
+include ':presentation'
 include ':domain'
 include ':data'
