--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         tools:targetApi="31">
         <activity
             android:name="com.example.ruen.views.MainActivity"
+            android:launchMode="singleInstance"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
