--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -19,9 +19,18 @@
         android:theme="@style/Theme.Ruen"
         tools:targetApi="31">
         <activity
-            android:name="com.example.ruen.views.MainActivity"
+            android:name=".views.MainActivity"
             android:launchMode="singleInstance"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".views.ShareIntentActivity"
+            android:theme="@style/Theme.Transparent"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -31,11 +40,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".views.ShareIntentActivity"
-            android:exported="true" >
-
 
         </activity>
         <meta-data
